--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -228,27 +228,27 @@ main {
   text-align: center;
   color: white;
   transform: translate(-50%, -50%);
-  -webkit-animation: size-change 1s linear infinite;
-  animation: size-change 1s linear infinite;
+  -webkit-animation: point-down 1s linear infinite;
+  animation: point-down 1s linear infinite;
 }
 
-@-webkit-keyframes size-change {
+@-webkit-keyframes point-down {
   0% {
-    height: 5rem;
+    bottom: 20%;
   }
 
   100% {
-    height: 2.5rem;
+    bottom: 5%;
   }
 }
 
-@keyframes size-change {
+@keyframes point-down {
   0% {
-    height: 5rem;
+    bottom: 20%;
   }
 
   100% {
-    height: 2.5rem;
+    bottom: 5%;
   }
 }
 
